--- a/server/package.json
+++ b/server/package.json
@@ -13,10 +13,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^5.12.1",
+    "@prisma/client": "^5.13.0",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "prisma": "^5.12.1"
+    "express": "^4.19.2"
+  },
+  "devDependencies": {
+    "prisma": "^5.13.0"
   }
 }
