--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "animate.css": "^4.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
