--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
-PORT=3000
+PORT=3001
 
 # This was inserted by `prisma init`:
 # Environment variables declared in this file are automatically made available to Prisma.
@@ -8,3 +8,6 @@ PORT=3000
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://postgres:123456789@localhost:5432/project?schema=public"
+
+SESSION_SECRET="notellsessionsecret"
+JWT_SECRET="notelljwtsecret"
