--- a/client/package.json
+++ b/client/package.json
@@ -7,9 +7,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
+    "axios": "^1.7.2",
+    "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-fade-in": "^2.0.1",
     "react-icons": "^5.2.0",
+    "react-lottie": "^1.2.4",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
