--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-fade-in": "^2.0.1",
     "react-icons": "^5.2.0",
     "react-lottie": "^1.2.4",
+    "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.11",
     "web-vitals": "^2.1.4"
