New Frontend : FullLayout Setup Done

--- a/client1/package.json
+++ b/client1/package.json
@@ -6,17 +6,23 @@
     "@babel/plugin-proposal-private-property-in-object": "7.21.11",
     "@emotion/react": "11.11.1",
     "@emotion/styled": "11.11.0",
+    "@mui/icons-material": "5.11.16",
+    "@mui/lab": "5.0.0-alpha.133",
     "@mui/material": "^5.16.6",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "apexcharts": "3.41.0",
+    "axios-mock-adapter": "1.21.4",
     "axios": "^1.7.2",
     "react": "^18.3.1",
+    "react-apexcharts": "1.4.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.12",
+    "stylis-plugin-rtl": "2.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
