--- a/client1/package.json
+++ b/client1/package.json
@@ -16,11 +16,14 @@
     "apexcharts": "3.41.0",
     "axios": "^1.7.2",
     "axios-mock-adapter": "1.21.4",
+    "chart.js": "^4.4.4",
     "react": "^18.3.1",
     "react-apexcharts": "1.4.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
+    "react-spring": "^9.7.4",
     "react-toastify": "^10.0.5",
     "styled-components": "^6.1.12",
     "stylis-plugin-rtl": "2.1.1",
