--- a/client1/public/manifest.json
+++ b/client1/public/manifest.json
@@ -1,19 +1,19 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "ROPA App",
+  "name": "Records of Processing Activities App",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "src": "ropa64.png",
+      "type": "image/png",
+      "sizes": "64x64"
     },
     {
-      "src": "logo192.png",
+      "src": "ropa192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "logo512.png",
+      "src": "ropa512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
