--- a/server/.env
+++ b/server/.env
@@ -9,7 +9,9 @@ CLIENT_ORIGIN=http://localhost:3000
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://postgres:123456789@localhost:5432/ropa?schema=public"
+# DATABASE_URL="postgresql://postgres:123456789@localhost:5432/ropa?schema=public"
+DATABASE_URL="postgresql://postgres:123456789@database:5432/ropa?schema=public"
 
 SESSION_SECRET="notellsessionsecret"
 JWT_SECRET="notelljwtsecret"
+
