--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,6 @@
 PORT=3001
 
-CLIENT_ORIGIN=http://localhost:3000
+CLIENT_ORIGIN=http://20.255.153.125:3000
 
 # This was inserted by `prisma init`:
 # Environment variables declared in this file are automatically made available to Prisma.
