update client env

--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,2 @@
-REACT_APP_SERVER_SIDE=http://localhost:3001/api
+REACT_APP_SERVER_SIDE=http://backend:3001/api
+# REACT_APP_SERVER_SIDE=http://localhost:3001/api
