--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,3 @@
-REACT_APP_SERVER_SIDE=http://backend:3001/api
+REACT_APP_SERVER_SIDE=http://20.255.153.125:3001/api
+# REACT_APP_SERVER_SIDE=http://backend:3001/api
 # REACT_APP_SERVER_SIDE=http://localhost:3001/api
