--- a/server/.env
+++ b/server/.env
@@ -1,7 +1,5 @@
 PORT=3001
 
-CLIENT_ORIGIN=http://20.255.153.125:3000
-
 # This was inserted by `prisma init`:
 # Environment variables declared in this file are automatically made available to Prisma.
 # See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
@@ -10,7 +8,9 @@ CLIENT_ORIGIN=http://20.255.153.125:3000
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 # DATABASE_URL="postgresql://postgres:123456789@localhost:5432/ropa?schema=public"
-DATABASE_URL="postgresql://postgres:123456789@database:5432/ropa?schema=public"
+# DATABASE_URL="postgresql://postgres:123456789@database:5432/ropa?schema=public"
+DATABASE_URL="postgresql://postgres:123456789@20.255.153.125:5432/ropa?schema=public"
+
 
 SESSION_SECRET="notellsessionsecret"
 JWT_SECRET="notelljwtsecret"
