--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,7 @@
 PORT=3001
 
+COOKIE_DOMAIN=20.255.153.125
+
 # This was inserted by `prisma init`:
 # Environment variables declared in this file are automatically made available to Prisma.
 # See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
