--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,6 @@
 PORT=3001
 
-COOKIE_DOMAIN=20.255.153.125
+COOKIE_DOMAIN=192.168.1.111
 
 # This was inserted by `prisma init`:
 # Environment variables declared in this file are automatically made available to Prisma.
@@ -10,8 +10,8 @@ COOKIE_DOMAIN=20.255.153.125
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 # DATABASE_URL="postgresql://postgres:123456789@localhost:5432/ropa?schema=public"
-# DATABASE_URL="postgresql://postgres:123456789@database:5432/ropa?schema=public"
-DATABASE_URL="postgresql://postgres:123456789@20.255.153.125:5432/ropa?schema=public"
+DATABASE_URL="postgresql://postgres:123456789@database:5432/ropa?schema=public"
+# DATABASE_URL="postgresql://postgres:123456789@20.255.153.125:5432/ropa?schema=public"
 
 
 SESSION_SECRET="notellsessionsecret"
