--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -4,23 +4,12 @@ server {
     
     root /usr/share/nginx/html;
     index index.html;
-    
-    # Support HTML5 history mode
-    location / {
-        try_files $uri $uri/ /index.html;
-        
-        # Enable CORS
-        add_header 'Access-Control-Allow-Origin' '*';
-        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
-        add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
-    }
-
     # Handle 404s by serving index.html
     error_page 404 =200 /index.html;
 
     # Proxy API requests
-    location /api/ {
-        proxy_pass http://backend:3001/;
+    location /api {
+        proxy_pass http://backend:3001/api;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
@@ -31,6 +20,10 @@ server {
         add_header 'Access-Control-Allow-Origin' '*';
         add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
         add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
+    }
+
+    location / {
+            try_files $uri $uri/ /index.html;
     }
 
     # Cache static assets
