--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -10,5 +10,10 @@ RUN npm run build
 FROM nginx:alpine
 COPY --from=build /app/build /usr/share/nginx/html
 COPY nginx.conf /etc/nginx/conf.d/default.conf
-EXPOSE 80
+
+# Copy SSL certificate and key
+COPY server.cert /etc/nginx/server.cert
+COPY server.key /etc/nginx/server.key
+
+EXPOSE 80 443
 CMD ["nginx", "-g", "daemon off;"]
