--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -1,13 +1,20 @@
 server {
     listen 80;
     server_name localhost;
+    return 301 https://$host$request_uri;
+}
+
+server {
+    listen 443 ssl;
+    ssl_certificate /etc/nginx/server.cert;
+    ssl_certificate_key /etc/nginx/server.key;
+    
+    server_name localhost;
     
     root /usr/share/nginx/html;
     index index.html;
-    # Handle 404s by serving index.html
     error_page 404 =200 /index.html;
 
-    # Proxy API requests
     location /api {
         proxy_pass http://backend:3001/api;
         proxy_http_version 1.1;
@@ -16,17 +23,15 @@ server {
         proxy_set_header Host $host;
         proxy_cache_bypass $http_upgrade;
         
-        # Enable CORS for API
         add_header 'Access-Control-Allow-Origin' '*';
         add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
         add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
     }
 
     location / {
-            try_files $uri $uri/ /index.html;
+        try_files $uri $uri/ /index.html;
     }
 
-    # Cache static assets
     location ~* \.(?:ico|css|js|gif|jpe?g|png|woff2?|eot|ttf|svg)$ {
         expires 6M;
         access_log off;
