--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -6,8 +6,8 @@ server {
 
 server {
     listen 443 ssl;
-    ssl_certificate /etc/nginx/server.cert;
-    ssl_certificate_key /etc/nginx/server.key;
+    ssl_certificate /etc/nginx/ssl.crt;
+    ssl_certificate_key /etc/nginx/ssl_private.key;
     
     server_name localhost;
     
